tests/unit-fail-compilation/needsInclude.ref
needsInclude.c:2:10: fatal error: 'include.h' file not found
#include "include.h"
         ^
1 error generated.
Translation failed. Run kcc -d needsInclude.c to see commands run.
